Update the guest header
changed it from guest to away

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             </div>
             <div>
-                <h4>GUEST</h4>
+                <h4>AWAY</h4>
              <P id="guestscore">0</P>
              <button id="guest-btn1"onclick="guest1()">+1</button>
              <button id="guest-btn2"onclick="guest2()">+2</button>
