back to the normal names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div>
-                <h3>US</h3>
+                <h3>HOME</h3>
                 <P id="homescore">0</P>
                <button id="home-btn1"onclick="home1()">+1</button>
                <button id="home-btn2"onclick="home2()">+2</button>
@@ -13,7 +13,7 @@
 
             </div>
             <div>
-                <h4>THE LOSERS</h4>
+                <h4>GUEST</h4>
              <P id="guestscore">0</P>
              <button id="guest-btn1"onclick="guest1()">+1</button>
              <button id="guest-btn2"onclick="guest2()">+2</button>
